@@ -904,9 +904,6 @@ h2 .show-infos {
  */
 
 #wpbody-content .wp-list-table {
-	.column-cs_replacement {
-		width: 30%;
-	}
 
 	&.fixed {
 		@media screen and (max-width: 782px) {
